# jominipy

./: .gitignore  .gitmodules  AGENTS_DONT_LOOK.md  lefthook.yml  pyproject.toml  pyrefly.toml  ruff.toml  sumi.toml
docs/: AGENT_QUICKSTART.md  AGENT_UPDATE_PROTOCOL.md  ARCHITECTURE.md  BIOME_PARITY.md  EDGE_CASES_FAILURE.md  HANDOFF.md  JOMINI_SYNTAX.md  JUNIOR_CS_STUDENT_INTRO.md  NEXT_AGENT_ROADMAP.md  RULES_SYNTAX.md  STATUS.md
docs/archive/: HANDOFF_HISTORY_2026-02.md  HANDOFF_LEGACY_2026-02-09.md  NEXT_AGENT_ROADMAP_LEGACY_2026-02-09.md
docs/clausewitz/: example.py
docs/parser/: tokens.py
jominipy/analysis/: __init__.py  facts.py
jominipy/ast/: __init__.py  lower.py  model.py  scalar.py  views.py
jominipy/cst/: __init__.py  green.py  red.py
jominipy/diagnostics/: __init__.py  codes.py  diagnostic.py  report.py
jominipy/format/: __init__.py  runner.py
jominipy/lexer/: __init__.py  buffered_lexer.py  faster_lexer.py  lexer.py  tokens.py
jominipy/lint/: __init__.py  rules.py  runner.py
jominipy/localisation/: __init__.py  index.py  keys.py  load.py  model.py  parser.py  (+1 more)
references/: lexer.py
scripts/: debug_rules_ir.py  dump_tokens.py  generate_schema.py  setup-dev.sh  time_localisation_parse.py
tests/: __init__.py  _debug.py  _shared_cases.py  test_ast.py  test_ast_views.py  test_cst_red.py  test_lexer.py  test_lint_typecheck_engines.py  test_loc_l_english.yml  test_localisation_keys.py  test_localisation_parser.py  test_parse_result.py  test_parser.py  test_pipeline_entrypoints.py  test_rules_ingest.py  test_type_members_resolution.py
(+84 files in other folders)
