[project]
name = "jominipy"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[dependency-groups]
dev = [
    "git-sumi>=0.2.0",
    "lefthook>=2.0.15",
    "pyrefly>=0.51.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "tqdm>=4.67.3",
]

[project.scripts]
jominipy = "jominipy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
version.path = "jominipy/__init__.py"
build.targets.wheel.packages = ["jominipy"]
